--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-404
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- <meta name="description" content=""> -->
+    <!-- <link rel="icon" href="favicon.ico"> -->
+
+    <title>Travel | Nathan.sx</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+    <link href="travel.css" rel="stylesheet">
+  </head>
+
+  <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="https://nathan.sx">Nathan.sx</a>
+    </nav>
+
+    <main role="main" class="container">
+      <div class="row">
+        <div class="col-8">
+          <h3>Blog Posts</h3>
+
+          <p>
+            <a href="https://medium.com/@nathontravels/the-need-to-travel-f38606b0b10" target="_blank">The Need to Travel</a> <span class="text-muted">(July 2018)</span>
+          </p>
+
+          <h3>Projects</h3>
+
+          <p>
+            <a href="https://touristmap.nathan.sx" target="_blank">British Citizen Tourist Map</a> &mdash; A map of entry requirements for British citizens who want to travel the world.
+          </p>
+        </div>
+        <div class="col-4">
+          <h3>About</h3>
+
+          <p>Hi! I'm Nathan, a British/Dutch hacker who likes adventure. From March 2019 onwards I'll be travelling the world and sharing my experiences with the Internet. Avoiding Brexit by only a couple of weeks, I'm choosing uncertainty on my own terms.</p>
+
+          <h3>Links</h3>
+
+          <p>This is where all the interesting stuff is:</p>
+
+          <p>
+            <b>Twitter</b>: <a href="https://twitter.com/NathOnTravels" target="_blank">@NathOnTravels</a><br>
+            <b>Instagram</b>: <a href="https://instagram.com/NathOnTravels" target="_blank">@NathOnTravels</a><br>
+            <b>Medium</b>: <a href="https://medium.com/@nathontravels" target="_blank">@NathOnTravels</a><br>
+            <b>Imgur</b>: <a href="https://imgur.com/user/NathOnTravels" target="_blank">NathOnTravels</a><br>
+          </p>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer">
+      Contact: me [at] this domain <abbr title=".sx is the country code for Sint Maarten, an autonomous country within the Kingdom of the Netherlands. It's a reference to my Dutch citizenship." class="float-right d-none d-lg-block">Why .sx?</abbr>
+    </footer>
+  </body>
+</html>
