--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main role="main" class="container">
       <div class="row">
-        <div class="col-8">
+        <div class="col-md-8">
           <h3>Blog Posts</h3>
 
           <p>
@@ -33,7 +33,7 @@
             <a href="https://touristmap.nathan.sx" target="_blank">British Citizen Tourist Map</a> &mdash; A map of entry requirements for British citizens who want to travel the world.
           </p>
         </div>
-        <div class="col-4">
+        <div class="col-md-4">
           <h3>About</h3>
 
           <p>Hi! I'm Nathan, a British/Dutch hacker who likes adventure. From March 2019 onwards I'll be travelling the world and sharing my experiences with the Internet. Avoiding Brexit by only a couple of weeks, I'm choosing uncertainty on my own terms.</p>
