--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h3>Projects</h3>
 
           <p>
-            <a href="https://touristmap.nathan.sx" target="_blank">British Citizen Tourist Map</a> &mdash; A map of entry requirements for British citizens who want to travel the world.
+            <a href="https://touristmap.travel.nathan.sx" target="_blank">British Citizen Tourist Map</a> &mdash; A map of entry requirements for British citizens who want to travel the world.
           </p>
         </div>
         <div class="col-md-4">
