--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Blog posts and projects by @NathOnTravels.">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@NathOnTravels">
+    <meta name="twitter:creator" content="@NathOnTravels">
+    <meta name="twitter:title" content="Nathan.sx">
+    <meta name="twitter:description" content="Blog posts and projects by @NathOnTravels.">
+    <meta name="twitter:image" content="https://travel.nathan.sx/assets/images/twitter/card.png">
+
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
