--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <h3>Projects</h3>
 
           <p>
+            <a href="https://map.travel.nathan.sx" target="_blank">Travel Map</a> &mdash; A map of all the countries I've visited (excluding layovers).<br>
             <a href="https://touristmap.travel.nathan.sx" target="_blank">British Citizen Tourist Map</a> &mdash; A map of entry requirements for British citizens who want to travel the world.
           </p>
         </div>
