--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="col-md-8">
           <h3>Blog Posts</h3>
 
-          <p>
+          <p class="pb-3">
             <a href="https://medium.com/@nathontravels/the-need-to-travel-f38606b0b10" target="_blank">The Need to Travel</a> <span class="text-muted">(July 2018)</span>
           </p>
 
@@ -58,7 +58,7 @@
         <div class="col-md-4">
           <h3>About</h3>
 
-          <p>Hi! I'm Nathan, a British/Dutch hacker who likes adventure. From March 2019 onwards I'll be travelling the world and sharing my experiences with the Internet. Avoiding Brexit by only a couple of weeks, I'm choosing uncertainty on my own terms.</p>
+          <p class="pb-3">Hi! I'm Nathan, a British/Dutch hacker who likes adventure. From March 2019 onwards I'll be travelling the world and sharing my experiences with the Internet. Avoiding Brexit by only a couple of weeks, I'm choosing uncertainty on my own terms.</p>
 
           <h3>Links</h3>
 
