Add Insurance link

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
           <p>
             <a href="https://gear.travel.nathan.sx" target="_blank">Travel Gear</a> &mdash; All the travel gear I personally use.<br>
+            <a href="https://insurance.travel.nathan.sx" target="_blank">Travel Insurance</a> &mdash; Looking for travel insurance? Look no further.<br>
             <a href="https://map.travel.nathan.sx" target="_blank">Travel Map</a> &mdash; A map of all the countries I've visited (excluding layovers).<br>
             <a href="https://touristmap.travel.nathan.sx" target="_blank">British Citizen Tourist Map</a> &mdash; A map of entry requirements for British citizens who want to travel the world.
           </p>
