--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <h3>Blog Posts</h3>
 
           <p class="pb-3">
+            <a href="https://medium.com/@nathontravels/footprints-in-the-sand-93f2dae30f15" target="_blank">Footprints in the Sand</a> <span class="text-muted">(July 2019)</span><br>
             <a href="https://medium.com/@nathontravels/my-minimal-digital-nomad-packing-list-8a545d00eafd" target="_blank">My Minimal Digital Nomad Packing List</a> <span class="text-muted">(February 2019)</span><br>
             <a href="https://medium.com/@nathontravels/the-need-to-travel-f38606b0b10" target="_blank">The Need to Travel</a> <span class="text-muted">(July 2018)</span>
           </p>
