--- a/index.html
+++ b/index.html
@@ -1,91 +1,104 @@
-
-
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Blog posts and projects by @NathOnTravels.">
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@NathOnTravels">
-    <meta name="twitter:creator" content="@NathOnTravels">
-    <meta name="twitter:title" content="Nathan.sx">
-    <meta name="twitter:description" content="Blog posts and projects by @NathOnTravels.">
-    <meta name="twitter:image" content="https://travel.nathan.sx/assets/images/twitter/card.png">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Blog posts and projects by @NathOnTravels.">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicons/site.webmanifest">
-    <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#3d9970">
-    <link rel="shortcut icon" href="assets/favicons/favicon.ico">
-    <meta name="msapplication-TileColor" content="#3d9970">
-    <meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@NathOnTravels">
+  <meta name="twitter:creator" content="@NathOnTravels">
+  <meta name="twitter:title" content="Nathan.sx">
+  <meta name="twitter:description" content="Blog posts and projects by @NathOnTravels.">
+  <meta name="twitter:image" content="https://travel.nathan.sx/assets/images/twitter/card.png">
 
-    <title>Travel | Nathan.sx</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+  <link rel="manifest" href="assets/favicons/site.webmanifest">
+  <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#3d9970">
+  <link rel="shortcut icon" href="assets/favicons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#3d9970">
+  <meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <title>Travel | Nathan.sx</title>
 
-    <link href="assets/css/travel.css" rel="stylesheet">
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  </head>
+  <link href="assets/css/travel.css" rel="stylesheet">
 
-  <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
-      <a class="navbar-brand" href="https://nathan.sx"><i class="fas fa-globe-americas"></i> Nathan.sx</a>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+</head>
 
-      <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-        <li class="nav-item active">
-          <a class="nav-link" href="https://insurance.travel.nathan.sx" target="_blank">Travel Insurance</a>
-        </li>
-      </ul>
-    </nav>
+<body>
+  <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
+    <a class="navbar-brand" href="https://nathan.sx"><i class="fas fa-globe-americas"></i> Nathan.sx</a>
 
-    <main role="main" class="container">
-      <div class="row">
-        <div class="col-md-8">
-          <h3>Blog Posts</h3>
+    <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+      <li class="nav-item active">
+        <a class="nav-link" href="https://insurance.travel.nathan.sx" target="_blank">Travel Insurance</a>
+      </li>
+    </ul>
+  </nav>
 
-          <p class="pb-3">
-            <a href="https://medium.com/@nathontravels/footprints-in-the-sand-93f2dae30f15" target="_blank">Footprints in the Sand</a> <span class="text-muted">(July 2019)</span><br>
-            <a href="https://medium.com/@nathontravels/my-minimal-digital-nomad-packing-list-8a545d00eafd" target="_blank">My Minimal Digital Nomad Packing List</a> <span class="text-muted">(February 2019)</span><br>
-            <a href="https://medium.com/@nathontravels/the-need-to-travel-f38606b0b10" target="_blank">The Need to Travel</a> <span class="text-muted">(July 2018)</span>
-          </p>
+  <main role="main" class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h3>Blog Posts</h3>
 
-          <h3>Projects</h3>
+        <p class="pb-3">
+          <a href="https://medium.com/@nathontravels/footprints-in-the-sand-93f2dae30f15" target="_blank">Footprints in
+            the Sand</a> <span class="text-muted">(July 2019)</span><br>
+          <a href="https://medium.com/@nathontravels/my-minimal-digital-nomad-packing-list-8a545d00eafd"
+            target="_blank">My Minimal Digital Nomad Packing List</a> <span class="text-muted">(February
+            2019)</span><br>
+          <a href="https://medium.com/@nathontravels/the-need-to-travel-f38606b0b10" target="_blank">The Need to
+            Travel</a> <span class="text-muted">(July 2018)</span>
+        </p>
 
-          <p>
-            <a href="https://gear.travel.nathan.sx" target="_blank">Travel Gear</a> &mdash; All the travel gear I personally use.<br>
-            <a href="https://insurance.travel.nathan.sx" target="_blank">Travel Insurance</a> &mdash; Looking for travel insurance? Look no further.<br>
-            <a href="https://map.travel.nathan.sx" target="_blank">Travel Map</a> &mdash; A map of all the countries I've visited (excluding layovers).<br>
-            <a href="https://touristmap.travel.nathan.sx" target="_blank">British Citizen Tourist Map</a> &mdash; A map of entry requirements for British citizens who want to travel the world.
-          </p>
-        </div>
-        <div class="col-md-4">
-          <h3>About</h3>
+        <h3>Projects</h3>
 
-          <p class="pb-3">Hi! I'm Nathan, a British/Dutch hacker who likes adventure. From March 2019 onwards I'll be travelling the world and sharing my experiences with the Internet. Avoiding Brexit by only a couple of weeks, I'm choosing uncertainty on my own terms.</p>
-
-          <h3>Links</h3>
-
-          <p>This is where all the interesting stuff is:</p>
-
-          <p>
-            <b>Twitter</b>: <a href="https://twitter.com/NathOnTravels" target="_blank">@NathOnTravels</a><br>
-            <b>Instagram</b>: <a href="https://instagram.com/NathOnTravels" target="_blank">@NathOnTravels</a><br>
-            <b>Medium</b>: <a href="https://medium.com/@nathontravels" target="_blank">@NathOnTravels</a><br>
-            <b>Imgur</b>: <a href="https://imgur.com/user/NathOnTravels" target="_blank">NathOnTravels</a><br>
-            <b>Keybase</b>: <a href="https://keybase.io/nathonsecurity" target="_blank">NathOnSecurity</a><br>
-          </p>
-        </div>
+        <p>
+          <a href="https://gear.travel.nathan.sx" target="_blank">Travel Gear</a> &mdash; All the travel gear I
+          personally use.<br>
+          <a href="https://insurance.travel.nathan.sx" target="_blank">Travel Insurance</a> &mdash; Looking for travel
+          insurance? Look no further.<br>
+          <a href="https://map.travel.nathan.sx" target="_blank">Travel Map</a> &mdash; A map of all the countries I've
+          visited (excluding layovers).<br>
+          <a href="https://touristmap.travel.nathan.sx" target="_blank">British Citizen Tourist Map</a> &mdash; A map of
+          entry requirements for British citizens who want to travel the world.
+        </p>
       </div>
-    </main>
+      <div class="col-md-4">
+        <h3>About</h3>
 
-    <footer class="footer">
-      Contact: me [at] this domain <abbr title=".sx is the country code for Sint Maarten, an autonomous country within the Kingdom of the Netherlands. It's a reference to my Dutch citizenship." class="float-right d-none d-lg-block">Why .sx?</abbr>
-    </footer>
-  </body>
+        <p class="pb-3">Hi! I'm Nathan, a Dutch and Brit-ish hacker who likes adventure. I tried to avoid Brexit by
+          travelling the world and then COVID hit so now I'm back in the UK, drinking tea in the rain and waiting for
+          the day I can travel again.</p>
+
+        <h3>Links</h3>
+
+        <p>This is where all the interesting stuff is:</p>
+
+        <p>
+          <b>Twitter</b>: <a href="https://twitter.com/NathOnTravels" target="_blank">@NathOnTravels</a><br>
+          <b>Instagram</b>: <a href="https://instagram.com/NathOnTravels" target="_blank">@NathOnTravels</a><br>
+          <b>Medium</b>: <a href="https://medium.com/@nathontravels" target="_blank">@NathOnTravels</a><br>
+          <b>Imgur</b>: <a href="https://imgur.com/user/NathOnTravels" target="_blank">NathOnTravels</a><br>
+          <b>Keybase</b>: <a href="https://keybase.io/nathonsecurity" target="_blank">NathOnSecurity</a><br>
+        </p>
+      </div>
+    </div>
+  </main>
+
+  <footer class="footer">
+    Contact: me [at] this domain <abbr
+      title=".sx is the country code for Sint Maarten, an autonomous country within the Kingdom of the Netherlands. It's a reference to my Dutch citizenship."
+      class="float-right d-none d-lg-block">Why .sx?</abbr>
+  </footer>
+</body>
+
 </html>
