--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <h3>Blog Posts</h3>
 
         <p class="pb-3">
+          <a href="https://medium.com/@nathontravels/moving-to-sakartvelo-23069f990d9b" target="_blank">Moving to Sakartvelo</a> <span class="text-muted">(July 2020)</span><br>
           <a href="https://medium.com/@nathontravels/footprints-in-the-sand-93f2dae30f15" target="_blank">Footprints in
             the Sand</a> <span class="text-muted">(July 2019)</span><br>
           <a href="https://medium.com/@nathontravels/my-minimal-digital-nomad-packing-list-8a545d00eafd"
